--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -34,7 +34,7 @@ socialLinks:
 
 - name: Twitter
   icon: "fab fa-twitter"
-  url: "#"
+  url: "https://x.com/h_kojima_sp"
 
 skills:
 - name: Python
