--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -35,6 +35,9 @@ jobs:
     - name: Build
       run: hugo --minify
 
+    - name: create CNAME
+      run: touch CNAME && echo "hayate-kojima.jp" >> CNAME
+
     # push the generated content into the `gh-pages` branch.
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v4
