--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -35,9 +35,6 @@ jobs:
     - name: Build
       run: hugo --minify
 
-    - name: create CNAME
-      run: touch CNAME && echo "hayate-kojima.jp" >> CNAME
-
     # push the generated content into the `gh-pages` branch.
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v4
@@ -45,3 +42,4 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
         publish_dir: ./public
+        cname: hayate-kojima.jp
