--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,7 +8,7 @@ section:
   # template: sections/about.html
 
 # your designation
-designation: Junior researcher
+designation: Graduate student
 # your company information
 company:
   name: Tokyo University of Agriculture and Technology
