--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -11,15 +11,28 @@ section:
 # Your experiences
 experiences:
 - company:
+    name: "The Japan Society for the Promotion of Science (JSPS)"
+    url: ""
+    location: Osaka, Japan
+    # logo: /images/sections/experiences/company1.jpg
+    # company overview
+    overview: ""
+  positions:
+  - designation: JSPS Doctoral Course Research Fellowship (DC1) @ The University of Osaka
+    start: Apr 2025
+    # give some points about what was your responsibilities at the company.
+
+- company:
     name: "** (not open to the public)"
     url: ""
-    location: "**"
+    location: "Online"
     # logo: /images/sections/experiences/company1.jpg
     # company overview
     overview: ""
   positions:
   - designation: Programming Teacher (part-time)
     start: Oct 2023
+    end: Mar 2025
     # give some points about what was your responsibilities at the company.
     responsibilities:
     - "I teach Unity, Python, etc. to high school students."
