--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,11 +8,11 @@ section:
   # template: sections/about.html
 
 # your designation
-designation: Graduate student
+designation: Ph.D. Student
 # your company information
 company:
-  name: Tokyo University of Agriculture and Technology
-  url: "https://www.tuat.ac.jp/en/"
+  name: The University of Osaka
+  url: "https://www.osaka-u.ac.jp/en"
 
 # your resume. this file path should be relative to you "static" directory
 # Dreprecated. Use resourceLinks instead.
