--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -12,6 +12,6 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I am a graduate student.
+  - I am a Ph.D student.
   - I am a programmer.
   - I am a data-scintist.
