--- a/data/en/sections/publications.yaml
+++ b/data/en/sections/publications.yaml
@@ -35,7 +35,7 @@ buttons:
 
 publications:
 
-- title: "Multiscale graph construction using non-local cluster features"
+- title: "Algorithm Unrolling-based Denoising of Multimodal Graph Signals"
   publishedIn:
     name: "arXiv"
     date: "May. 2025"
