add IEEE SPS Tokyo Joint Chapter Student Award

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -89,6 +89,9 @@ skills:
   icon: "devicon-tailwindcss-original"
 
 qualifications:
+- name: "IEEE SPS Tokyo Joint Chapter Student Award"
+  year: "2025"
+
 - name: "JASSO scholarship Refund Exemption for Excellent Students"
   year: "2025"
   
